--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
 build_linux:
    stage: build
    before_script:
-      - apt update & apt install -y clang llvm ninja cmake libblas-dev libboost-dev libboost-filesystem-dev libboost-graph-dev libboost-program-options-dev libboost-thread-dev libgl-dev libgmp-dev libmpfr-dev libopencv-dev libxcb-xinput-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev xrandr-dev     
+      - sudo apt update & sudo apt install -y clang llvm ninja cmake libblas-dev libboost-dev libboost-filesystem-dev libboost-graph-dev libboost-program-options-dev libboost-thread-dev libgl-dev libgmp-dev libmpfr-dev libopencv-dev libxcb-xinput-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev xrandr-dev     
    script:
       - mkdir build-release-ci
       - cd build-release-ci
